plugins {
    id 'java'
    id 'application'
}

group = 'br.com.braille'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
    implementation 'org.liblouis:liblouis-java:5.2.1'
    implementation 'org.slf4j:slf4j-simple:2.0.12'

    testImplementation platform('org.junit:junit-bom:5.10.2')

    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
    mainClass = 'br.com.braille.service.TranscritorTextoBraille'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}
